# Demo---Practical-optimal-registration-of-terrestrial-LiDAR-scan-pairs

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
cmake/: FindSuper4PCS.cmake~  Super4PCS-AccelLibTargets.cmake~  Super4PCS-IOLibTargets.cmake~
data/: arch.config  courtyard.config  facade.config~  outTest.txt  trees.config  trees.config~
data/arch/: s01.ply~  s02.ply~
include/globReg4D/: GameTheoryAlbrarelli.h  LM.h  globReg4D.h
include/globReg4D/include/: ._state_priority_hashtable_df.hpp  data_indexation.h  geometry.h  interval_tree.h  mcirc_indexation.hpp~  mcirc_indexation.h~  nearest_neighbour_search.h  reg_binary_tree.h  reg_common.h  reg_rtree.h  registration.h  rot1_evaluator.h  search.h  search.hpp  search.hpp~  state.h  state_priority_hashtable.h  state_priority_hashtable.hpp  state_priority_hashtable.h~  state_priority_hashtable_df.hpp  state_priority_queue.h  state_priority_queue.hpp  translation_kdtree_data_set_indexation.h  translation_kdtree_data_set_indexation.hpp  util_sort.h
include/util/: inputGen.h
src/: main.cpp
src/globReg4D/: GameTheoryAlbrarelli.cpp  LM.cpp  globReg4D.cpp
src/globReg4D/src/: binarytree.cpp  geometry.cpp  imp_reg4.cpp  imp_rot1.cpp  interval_tree.cpp  reg_rtree.cpp  rot1_evaluator.cpp  util_sort.cpp
src/util/: inputGen.cpp  inputGen.h~
